--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <hr/>
         <p1><b></b>Vitame vas na nasej stranke, ktora obsahuje vsetky informacie</p></br>o nasich produktoch ziskate sem</b></p1>
         <hr/>
-        <h2>BUDE NOVY RELEASE SOON</h2> 
+        <h2>BUDE NOVY RELEASE SOON!</h2> 
         <p2>bude sa volat 108 ZVERIMEX</p>
             <hr/>
         <h3>108 soon</h3>
