--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <hr/>
 
         <span class="img-container">
-        <img src="resources/images/i13.jpg" width="600" height="400" alt="">
+        <img src="resources/images/i13.jpg" width="600" height="400" alt="Iphone 13 Pro">
         </span>
 
         <br/>
