--- a/resources/Fotoaparaty.html
+++ b/resources/Fotoaparaty.html
@@ -25,8 +25,8 @@
     <br/>
     <br/>
     <p3><b>389€<b/></p3>
-        <a href="kosik/kosik.html"><button>Vložiť do košíka</button></a>    
-    <br/>
+        <button type="button"onclick="alert('Produkt bol úspešne vložený do košíka')">Pridať do košíka</button>
+        <br/>
     <hr/>
 
     <img src="images/f2.jfif" width="250" height="200" alt="haha"
@@ -36,8 +36,7 @@
     <br/>
     <br/>
     <p3><b>1099€<b/></p3>
-        <a href="kosik/kosik.html"><button>Vložiť do košíka</button></a>    
-    
+        <button type="button"onclick="alert('Produkt bol úspešne vložený do košíka')">Pridať do košíka</button>
     <br/>
     <hr/>
 
@@ -48,8 +47,8 @@
     <br/>
     <br/>
     <p3><b>2090€<b/></p3>
-        <a href="kosik/kosik.html"><button>Vložiť do košíka</button></a>        
-    <br/>
+        <button type="button"onclick="alert('Produkt bol úspešne vložený do košíka')">Pridať do košíka</button>
+        <br/>
     <hr/>
 
     <img src="images/f4.jfif" width="250" height="200" alt="haha"
@@ -59,8 +58,8 @@
     <br/>
     <br/>
     <p3><b>2049€<b/></p3>
-        <a href="kosik/kosik.html"><button>Vložiť do košíka</button></a>        
-    <br/>
+        <button type="button"onclick="alert('Produkt bol úspešne vložený do košíka')">Pridať do košíka</button>
+        <br/>
     <hr/>
 
     <img src="images/f5.jfif" width="250" height="200" alt="haha"
@@ -70,8 +69,8 @@
     <br/>
     <br/>
     <p3><b>629€<b/></p3>
-        <a href="kosik/kosik.html"><button>Vložiť do košíka</button></a>        
-    <br/>
+        <button type="button"onclick="alert('Produkt bol úspešne vložený do košíka')">Pridať do košíka</button>
+        <br/>
     <hr/>
 
     <img src=""
