--- a/resources/Smartfony.html
+++ b/resources/Smartfony.html
@@ -250,8 +250,8 @@
         <hr/>
 
     <div class="text-center">
-        <p4>© 2021   Matej Tribula</p4>
-     </div>
+        <p4><i>© 2021   Matej Tribula</i></p4>
+         </div>
 
 
     </body> 
