--- a/resources/Hernekonzoly.html
+++ b/resources/Hernekonzoly.html
@@ -212,7 +212,7 @@
     <hr/>
 
         <div class="text-center">
-            <p4>© 2021   Matej Tribula</p4>
+        <p4><i>© 2021   Matej Tribula</i></p4>
         </div>
 
    
